@@ -2130,9 +2130,19 @@ public class DatabaseDescriptor
         conf.streaming_socket_timeout_in_ms = value;
     }
 
+    /**
+     * @deprecated use {@link this#getStreamingKeepAlivePeriod()} instead
+     * @return streaming_socket_timeout_in_ms property
+     */
+    @Deprecated
     public static int getStreamingSocketTimeout()
     {
         return conf.streaming_socket_timeout_in_ms;
+    }
+
+    public static int getStreamingKeepAlivePeriod()
+    {
+        return conf.streaming_keep_alive_period_in_secs;
     }
 
     public static String getLocalDataCenter()
